--- a/.github/workflows/build_pull_request.yml
+++ b/.github/workflows/build_pull_request.yml
@@ -3,7 +3,6 @@ name: CI Pull Request
 on:
   pull_request:
 
-
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number }}
   cancel-in-progress: true
@@ -35,4 +34,4 @@ jobs:
       - name: Build project
         uses: gradle/gradle-command-action@982da8e78c05368c70dac0351bb82647a9e9a5d2 # v2
         with:
-          arguments: :inspector:shadowJar
+          arguments: :server:shadowJar
