--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,7 +3,7 @@ kotlin = "2.1.0"
 coroutines = "1.10.1"
 serialization = "1.8.0"
 dex2jar = "v64" # Stuck at v64 because of https://github.com/ThexXTURBOXx/dex2jar/issues/27
-okhttp = "5.0.0-alpha.14"
+okhttp = "5.3.0"
 rhino = "1.7.14"
 multiplatform-settings = "0.8.1"
 
@@ -16,6 +16,7 @@ coroutines-jdk8 = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8", ve
 
 serialization-protobuf = { module = "org.jetbrains.kotlinx:kotlinx-serialization-protobuf", version.ref = "serialization" }
 serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "serialization" }
+serialization-json-okio = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json-okio", version.ref = "serialization" }
 
 # Dependency Injection
 kodein = "org.kodein.di:kodein-di-conf-jvm:7.11.0"
@@ -54,13 +55,20 @@ injekt-core = { module = "com.github.null2264.injekt:injekt-core", version = "41
 quickjs = "app.cash.quickjs:quickjs-jvm:0.9.2"
 
 xmlpull = "xmlpull:xmlpull:1.1.3.4a"
-apksig = "com.android.tools.build:apksig:7.1.2"
+apksig = "com.android.tools.build:apksig:8.13.0"
 androidx-annotation = "androidx.annotation:annotation:1.3.0"
 rhino-runtime = { module = "org.mozilla:rhino-runtime", version.ref = "rhino" }
 rhino-engine = { module = "org.mozilla:rhino-engine", version.ref = "rhino" }
 multiplatform-settings-jvm = { module = "com.russhwolf:multiplatform-settings-jvm", version.ref = "multiplatform-settings" }
 multiplatform-settings-serialization-jvm = { module = "com.russhwolf:multiplatform-settings-serialization-jvm", version.ref = "multiplatform-settings" }
 icu4j = "com.ibm.icu:icu4j:70.1"
+
+# NanoHTTPD
+nanohttpd = "org.nanohttpd:nanohttpd:2.3.1"
+
+# Jackson
+jackson-databind = "com.fasterxml.jackson.core:jackson-databind:2.15.2"
+jackson-kotlin = "com.fasterxml.jackson.module:jackson-module-kotlin:2.15.2"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -82,6 +90,7 @@ common = [
     "coroutines-core",
     "coroutines-jdk8",
     "serialization-json",
+    "serialization-json-okio",
     "serialization-protobuf",
     "kodein",
     "logback",
@@ -94,6 +103,9 @@ common = [
     "dex-translator",
     "dex-tools",
     "apk-parser",
+    "nanohttpd",
+    "jackson-databind",
+    "jackson-kotlin",
 ]
 okhttp = [
     "okhttp",
