--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,7 +59,7 @@ jobs:
             name: windows-x64
           - os: macos-14
             name: macOS-arm64
-          - os: macos-13
+          - os: macos-15-intel
             name: macOS-x64
 
     steps:
