--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,7 +8,6 @@ dex2jar = "2.4.33"
 polyglot = "24.2.2"
 settings = "1.3.0"
 twelvemonkeys = "3.12.0"
-koin = "4.1.1"
 
 [libraries]
 # Kotlin
@@ -42,8 +41,6 @@ jackson-databind = { module = "com.fasterxml.jackson.core:jackson-databind", ver
 jackson-kotlin = { module = "com.fasterxml.jackson.module:jackson-module-kotlin", version.ref = "jackson" }
 jackson-annotations = { module = "com.fasterxml.jackson.core:jackson-annotations", version.ref = "jackson" }
 
-# Dependency Injection
-koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 
 # dependencies of Tachiyomi extensions
 rxjava = "io.reactivex:rxjava:1.3.8"
@@ -139,7 +136,6 @@ shared = [
     "serialization-json",
     "serialization-json-okio",
     "serialization-protobuf",
-    "koin-core",
     "slf4japi",
     "logback",
     "kotlinlogging",
@@ -152,7 +148,11 @@ shared = [
     "dex2jar-tools",
     "apk-parser",
     "jackson-annotations",
-    "kcef"
+    "kcef",
+    "kodein",
+    "quickjs4j",
+    "quickjs4j-annotations",
+    "quickjs4j-processor"
 ]
 
 common = [
